[package]
name = "positive"
version = "0.1.0"
edition = "2024"
authors = ["Joaquín Béjar García <jb@taunais.com>"]
description = "A type-safe wrapper for guaranteed positive decimal values"
license = "MIT"
repository = "https://github.com/joaquinbejar/positive"
keywords = ["decimal", "positive", "numeric", "financial", "type-safe"]
categories = ["mathematics", "finance", "data-structures"]
readme = "README.md"

[dependencies]
rust_decimal = { version = "1.39", features = ["maths"] }
rust_decimal_macros = "1.39"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
approx = "0.5"
utoipa = { version = "5.4", features = ["decimal"], optional = true }

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
utoipa = ["dep:utoipa"]
